Phoenix-SDK-June-2008-RC1/SourceDir/Phoenix SDK June 2008/samples/Pascal/cpp/Test/Tests/Function3.baseline
Function3.p(4) error P2002: syntax error: token 'static (syntax error)'.

Function3.p - 1 error(s), 0 warning(s).

